fix the gap b/w  carousel and navbar

--- a/index.css
+++ b/index.css
@@ -25,7 +25,3 @@
 #offers {
   padding: 40px;
 }
-.carousel {
-  width: 10px;
-  height: 1000px;
-}
